Switch to my ArgsParser Nuget package

--- a/CreateCover/CreateCover.csproj
+++ b/CreateCover/CreateCover.csproj
@@ -10,4 +10,7 @@
   <ItemGroup>
     <Folder Include="Models\" />
   </ItemGroup>
+  <ItemGroup>
+    <PackageReference Include="ArgsParser" Version="4.0.5" />
+  </ItemGroup>
 </Project>
